AI 메인 페이지 Search 및 AI Matching Page 구현 사소한 버그 수정 필요